Refactorización de configuración de seguridad, manejo de JWT, controladores y servicios de la API de biblioteca; eliminación de clases obsoletas